Fixed squished text in pdf upload
[fixes #60524202]

--- a/app/assets/stylesheets/DocumentSet/index/import-mass-upload.less
+++ b/app/assets/stylesheets/DocumentSet/index/import-mass-upload.less
@@ -106,6 +106,8 @@
     margin-top: 4em;
     width: 35em;
     text-align: center;
+    clear: both;
+    padding-top: 1em;
   }
 
   .waiting {
